Avisos por minuto & correções de warnings.